remodified more but hero-image is not responsive, need to fix it

--- a/draft.css
+++ b/draft.css
@@ -458,3 +458,312 @@ margin: 20px;
 
 }
 
+
+
+/*All media query below*/
+
+@media screen and (min-width: 370px) {
+
+.hero-image-text-and-button{
+    margin-top: 15rem;
+}
+
+.hero-image {
+    position: relative;
+    background-image: url("../img/backGround.jpg");
+    -webkit-clip-path: polygon(0 23%, 100% 5%, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0%, 100% 0%, 100% 79%, 0% 93%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 489px;
+}
+
+}
+
+@media screen and (min-width: 394px) {
+.hero-image-text-and-button{
+    margin-top: 15rem;}
+
+.hero-image {
+    position: relative;
+    background-image: url("../img/backGround.jpg");
+    -webkit-clip-path: polygon(0 23%, 100% 5%, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0%, 100% 0%, 100% 79%, 0% 93%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 565px;
+}
+
+.travel-in-style{
+    margin-top: -8rem;
+}
+}
+
+
+@media screen and (min-width: 425px) {
+
+.hero-image-text-and-button{
+    margin-top: 16rem;
+}
+
+.hero-image {
+    position: relative;
+    background-image: url("../img/backGround.jpg");
+    -webkit-clip-path: polygon(0 23%, 100% 5%, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0%, 100% 0%, 100% 79%, 0% 93%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 565px;
+}
+
+.travel-in-style{
+    margin-top: -8rem;
+}
+}
+
+
+@media screen and (min-width: 452px) {
+.hero-image-text-and-button {
+    margin-top: 16rem;
+}
+}
+
+
+@media screen and (min-width: 464px) {
+.hero-image-text-and-button{
+    margin-top: 17rem;
+}
+
+.hero-image {
+    position: relative;
+    background-image: url("../img/backGround.jpg");
+    -webkit-clip-path: polygon(0 23%, 100% 5%, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0%, 100% 0%, 100% 79%, 0% 93%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 592px;
+}
+
+.travel-in-style{
+    margin-top: -8rem;
+}
+}
+
+
+@media screen and (min-width: 478px) {
+.hero-image-text-and-button{
+    margin-top: 18rem;
+}
+
+@media screen and (min-width: 540px) {
+.hero-image-text-and-button {
+    margin-top: 20rem;
+}
+
+
+.hero-image {
+    position: relative;
+    background-image: url("../img/backGround.jpg");
+    -webkit-clip-path: polygon(0 23%, 100% 5%, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0%, 100% 0%, 100% 79%, 0% 93%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 549px;
+}
+
+.travel-in-style{
+    margin-top: 0rem;
+}
+
+
+}
+
+
+@media screen and (min-width: 575px) {
+.hero-image-text-and-button {
+    margin-top: 21rem;
+}
+
+.travel-in-style{
+    margin-top: -4rem;
+}
+
+.hero-image {
+    position: relative;
+    background-image: url("../img/backGround.jpg");
+    -webkit-clip-path: polygon(0 23%, 100% 5%, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0%, 100% 0%, 100% 79%, 0% 93%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 590px;
+}
+
+.travel-in-style{
+    margin-top: -4rem;
+}
+
+}
+
+@media screen and (min-width: 600px) {
+.hero-image-text-and-button {
+    margin-top: 25rem;
+}
+
+.travel-in-style{
+    margin-top: -4rem;
+}
+
+.hero-image {
+    position: relative;
+    background-image: url("../img/backGround.jpg");
+    -webkit-clip-path: polygon(0 23%, 100% 5%, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0%, 100% 0%, 100% 79%, 0% 93%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 662px;
+}
+
+.travel-in-style{
+    margin-top: -4rem;
+}
+}
+
+@media screen and (min-width: 720px) {
+.hero-image-text-and-button {
+    margin-top: 13rem;
+    width: 23rem;
+    margin-left: 0rem;
+}
+
+.travel-in-style{
+    margin-top: -15rem;
+}
+
+.mainTitle {
+    font-size: 33px;
+    line-height: 3rem;
+    height: 100%;
+}
+
+.hero-image {
+    position: relative;
+    background-image: url("../img/backGround.jpg");
+    -webkit-clip-path: polygon(0 23%, 100% 5%, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0%, 100% 0%, 100% 79%, 0% 93%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 710px;
+}
+}
+
+@media screen and (min-width: 767px) {
+.hero-image-text-and-button {
+    margin-top: 12rem;
+    margin-left: 0rem;
+}
+
+.bluebox-and-carimg .card {
+width: 12rem;
+}
+
+.bgimg-and-text {
+    height: 578px;
+}
+
+.travel-in-style{
+    margin-top: -4rem;
+}
+
+.car1 {
+  height: 270px;
+    width: 100%;
+    margin-left: 0rem; 
+}
+
+.car2 {
+     height: 270px;
+    width: 100%;
+    margin-left: 0rem;
+}
+
+}
+
+@media screen and (min-width: 991px) {
+.hero-image-text-and-button {
+    margin-top: 14rem;
+    margin-left: 0rem;
+}
+
+.travel-in-style{
+    margin-top: 0rem;
+}
+
+.mainTitle {
+    font-size: 40px;
+    line-height: 4rem;
+    height: 100%;
+}
+
+.bgimg-and-text {
+    height: 578px;
+}
+}
+
+@media screen and (min-width: 1199px) {
+.hero-image-text-and-button{
+    margin-top: 15rem;
+}
+
+.hero-image {
+    position: relative;
+    background-image: url("../img/backGround.jpg");
+    -webkit-clip-path: polygon(0 23%, 100% 5%, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0%, 100% 0%, 100% 79%, 0% 93%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 730px;
+    margin-top: -17
+}
+
+.travel-in-style{
+    margin-top: -8rem;
+}
+}
+
+
+
+@media screen and (min-width: 1200px) {
+.hero-image-text-and-button {
+    margin-top: 17rem;
+    /*/*margin-left: -8rem;*/
+}
+
+.travel-in-style{
+    margin-top: 10rem;
+}
+}
+
+@media screen and (min-width: 1275px) {
+.hero-image-text-and-button {
+    margin-top: 17rem;
+    /*/*margin-left: -8rem;*/
+}
+
+.travel-in-style{
+    margin-top: 10rem;
+}
+
+.car1 {
+    width: 50%;
+    height: 100%;
+}
+}
